# batch-imagegen

./: README.md  app.py  pyproject.toml
batch_imagegen/: batch_builder.py  client.py  models.py  orchestrator.py  paths.py  predictor.py  store.py  uploader.py  zipper.py
batch_imagegen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/superpowers/notes/: 2026-05-25-pixelbin-sdk-check.md
docs/superpowers/plans/: 2026-05-25-batch-imagegen.md
docs/superpowers/specs/: 2026-05-25-batch-imagegen-design.md
tests/: test_app.py  test_batch_builder.py  test_e2e_fake.py  test_models.py  test_orchestrator_core.py  test_orchestrator_runner.py  test_predictor.py  test_store.py  test_uploader.py  test_zipper.py
tests/fake_pixelbin/: server.py
