[project]
name = "batch-imagegen"
version = "0.1.0"
description = "Local Streamlit tool for batch image generation via PixelBin"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit>=1.32",
    "streamlit-autorefresh>=1.0.1",
    "pixelbin>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2,<8",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
